cpp/test/FreezeScript/dbmap/fail/17_new.ice
module Test
{

interface C {};

struct S
{
    C m1; // FAIL
};

};
